--- a/day1/Cargo.toml
+++ b/day1/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "day1"
 version = "0.1.0"
-authors = ["houzhongjian <houzhongjian@kxkr.com>"]
+authors = ["houzhongjian <1556469348@qq.com>"]
 
 [dependencies]
